erDiagram
    %% ---------------------------
    %% Tabellen-Definitionen
    %% ---------------------------

    Addresses {
        int address_id PK
        varchar(100) street
        varchar(20) house_number
        varchar(20) postal_code
        varchar(100) city
    }

    Users {
        int user_id PK
        varchar(255) email
        varchar(100) first_name
        varchar(100) last_name
        int address_id FK
        text phone
        varchar(50) gender
        text interested_in
        date birthdate
    }

    Hobbies {
        int hobby_id PK
        varchar(255) hobby
    }

    UserHobbies {
        int user_id FK
        int hobby_id FK
        int priority
    }

    Friendships {
        int user_id1 FK
        int user_id2 FK
        varchar(50) status
    }

    Likes {
        int like_id PK
        int user_id FK
        int liked_user_id FK
        varchar(50) like_status
        timestamp like_time
    }

    Messages {
        int message_id PK
        int sender_id FK
        int receiver_id FK
        int conversation_id
        text message_text
        timestamp message_time
    }

    ProfilePictures {
        int profile_pic_id PK
        int user_id FK
        bytea image_data
    }

    AdditionalPhotos {
        int add_pic_id PK
        int user_id FK
        bytea image_data
        text add_pic_link
    }

    %% ---------------------------
    %% Beziehungen (Crow’s Foot)
    %% ---------------------------

    %% 1) Addresses -> Users (1 : n)
    Addresses ||--|{ Users : "HAS"

    %% 2) Users <-> UserHobbies <-> Hobbies (n : m via Zwischentabelle)
    Users ||--|{ UserHobbies : "HAS"
    Hobbies ||--|{ UserHobbies : "HAS"

    %% 3) Friendships: zwei FK auf Users (self-referencing m : n)
    Users ||--|{ Friendships : "user_id1"
    Users ||--|{ Friendships : "user_id2"

    %% 4) Likes: zwei FK auf Users (self-referencing, 1:n pro Spalte)
    Users ||--|{ Likes : "user_id"
    Users ||--|{ Likes : "liked_user_id"

    %% 5) Messages: sender_id & receiver_id auf Users
    Users ||--|{ Messages : "sender_id"
    Users ||--|{ Messages : "receiver_id"

    %% 6) ProfilePictures & AdditionalPhotos: je 1:n pro User
    Users ||--|{ ProfilePictures : "HAS"
    Users ||--|{ AdditionalPhotos : "HAS" 